--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,11 @@
+image:
+  file: .gitpod.Dockerfile
+
 # exposed ports
 ports:
 - port: 8080
   onOpen: open-preview
+
 # start up tasks
 tasks:
 - init: ./mvnw package -DskipTests
